--- a/src/components/main-page/main-page.css
+++ b/src/components/main-page/main-page.css
@@ -12,7 +12,10 @@
 }
 
 .season-anime {
-  max-width: 1305px;
+  min-width: 1305px;
+}
+.season-anime .season-titles {
+  min-width: inherit;
 }
 
 .season-titles,
@@ -67,6 +70,7 @@
     height: -moz-fit-content;
     height: fit-content;
     width: 100%;
+    min-width: 0;
   }
   .season-anime .season-anime-title {
     margin-left: 30px;
@@ -88,6 +92,7 @@
     gap: 5px;
     margin-left: auto;
     margin-right: auto;
+    min-width: 0;
   }
   .season-titles .title-main {
     width: 85vw;
