--- a/src/components/main-page/main-page.scss
+++ b/src/components/main-page/main-page.scss
@@ -12,7 +12,10 @@
   }
 }
 .season-anime {
-  max-width: 1305px;
+  min-width: 1305px;
+  .season-titles {
+    min-width: inherit;
+  }
 }
 .season-titles,
 .recently-added-titles {
@@ -60,6 +63,7 @@
   .season-anime {
     height: fit-content;
     width: 100%;
+    min-width: 0;
     .season-anime-title {
       margin-left: 30px;
     }
@@ -80,6 +84,8 @@
     gap: 5px;
     margin-left: auto;
     margin-right: auto;
+    min-width: 0;
+
     .title-main {
       width: 85vw;
       height: 150px;
