--- a/src/components/feedbeack-page/Feedback.css
+++ b/src/components/feedbeack-page/Feedback.css
@@ -86,4 +86,13 @@
   margin-top: 14px;
   transition: 0.2s;
   padding-left: 10px;
+}
+
+.feedback-add-url {
+  display: flex;
+  margin-bottom: 10px;
+}
+
+#feedback-url {
+  margin-right: 10px;
 }/*# sourceMappingURL=Feedback.css.map */
