--- a/src/components/feedbeack-page/Feedback.scss
+++ b/src/components/feedbeack-page/Feedback.scss
@@ -81,3 +81,10 @@
   transition: 0.2s;
   padding-left: 10px;
 }
+.feedback-add-url {
+  display: flex;
+  margin-bottom: 10px;
+}
+#feedback-url {
+  margin-right: 10px;
+}
