--- a/src/app.scss
+++ b/src/app.scss
@@ -22,6 +22,7 @@ body {
   max-width: 100vw;
   max-height: fit-content;
   margin-left: 0px;
+  overflow-x: hidden;
 }
 body:before {
   width: 100%;
