--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -154,8 +154,8 @@
 
 .search-result-wraper {
   width: 300px;
-  height: -moz-fit-content;
-  height: fit-content;
+  height: 0;
+  opacity: 0;
   display: flex;
   position: absolute;
   flex-direction: column;
@@ -163,13 +163,44 @@
   z-index: 100000;
   margin-top: 50px;
   margin-left: -50px;
+  transition: 0.2s;
+}
+.search-result-wraper a:last-of-type {
+  margin-bottom: 10px;
 }
 .search-result-wraper .search-result-title {
+  display: flex;
   margin: 0;
+  padding: 5px;
+}
+.search-result-wraper .search-result-title .title-name-tags {
+  width: 100%;
+  padding-left: 10px;
+}
+.search-result-wraper .search-result-title:hover {
+  background-color: rgb(6, 75, 140);
+}
+
+.search-result-wraper.unfiend {
+  opacity: 1;
+  height: -moz-fit-content;
+  height: fit-content;
+  color: rgb(243, 38, 38);
+  font-weight: 800;
+  font-size: 18px;
+  padding: 10px;
 }
 
 .search-wraper.hide .search-result-wraper {
   display: none;
+}
+
+.header-search-button {
+  background-color: rgba(6, 75, 140, 0.8);
+  border: 1px solid #3ce3e8;
+  height: 50px;
+  color: white;
+  font-size: 16px;
 }
 
 .header-profile {
@@ -232,16 +263,6 @@
   height: 30px;
 }
 
-@keyframes appear-button {
-  0% {
-    opacity: 0;
-    scale: 0.5;
-  }
-  100% {
-    opacity: 1;
-    scale: 1;
-  }
-}
 @media (max-width: 1100px) {
   .header {
     justify-content: space-evenly;
@@ -318,5 +339,26 @@
     border: none;
     height: 30px;
     color: white;
+  }
+}
+@keyframes searchApper {
+  from {
+    opacity: 0;
+    height: 0;
+  }
+  to {
+    opacity: 1;
+    height: -moz-fit-content;
+    height: fit-content;
+  }
+}
+@keyframes appear-button {
+  0% {
+    opacity: 0;
+    height: 0;
+  }
+  100% {
+    opacity: 1;
+    scale: 1;
   }
 }/*# sourceMappingURL=header.css.map */
