--- a/src/components/catalogue-page/Pagination/Pagination.scss
+++ b/src/components/catalogue-page/Pagination/Pagination.scss
@@ -36,6 +36,7 @@
   text-decoration: none;
   text-align: center;
   padding-top: 4px;
+  font-size: 16px;
 }
 .pagination-button.active {
   background-color: $base-light-blue;
