--- a/src/components/title/title.css
+++ b/src/components/title/title.css
@@ -1,7 +1,7 @@
 .title-main {
   width: 190px;
   transition: 0.5s;
-  height: 400px;
+  height: 410px;
   margin-top: 20px;
   overflow: hidden;
 }
@@ -77,7 +77,25 @@
   flex-direction: column;
   gap: 5px;
   font-size: 14px;
-  height: 100px;
+  height: 120px;
+}
+.title-name-tags .title-name {
+  height: -moz-fit-content;
+  height: fit-content;
+  max-height: 45px;
+  font-size: 18px;
+  overflow-wrap: break-word;
+  line-break: normal;
+  max-width: 190px;
+}
+.title-name-tags .title-tags {
+  height: -moz-fit-content;
+  height: fit-content;
+  overflow-wrap: break-word;
+}
+.title-name-tags .title-tags .tag {
+  color: #3ce3e8;
+  text-decoration: none;
 }
 
 .title-episodes {
@@ -170,20 +188,6 @@
     max-width: 155px;
     height: 100%;
     max-height: 240px;
-  }
-  .recently-added .title-name-tags {
-    padding-top: 0;
-    height: -moz-fit-content;
-    height: fit-content;
-  }
-  .recently-added .title-name-tags .tags {
-    display: none;
-  }
-  .recently-added .title-name-tags .name {
-    width: 100%;
-  }
-  .recently-added .title-name-tags .title-episodes {
-    display: none;
   }
   .title-main:hover::after {
     display: none;
