--- a/src/components/title/title.scss
+++ b/src/components/title/title.scss
@@ -3,7 +3,7 @@
 .title-main {
   width: 190px;
   transition: 0.5s;
-  height: 400px;
+  height: 410px;
   margin-top: 20px;
   overflow: hidden;
   span {
@@ -81,7 +81,23 @@
   flex-direction: column;
   gap: 5px;
   font-size: 14px;
-  height: 100px;
+  height: 120px;
+  .title-name {
+    height: fit-content;
+    max-height: 45px;
+    font-size: 18px;
+    overflow-wrap: break-word;
+    line-break: normal;
+    max-width: 190px;
+  }
+  .title-tags {
+    height: fit-content;
+    overflow-wrap: break-word;
+    .tag {
+      color: $base-light-blue;
+      text-decoration: none;
+    }
+  }
 }
 .title-episodes {
   position: relative;
@@ -172,21 +188,6 @@
         max-width: 155px;
         height: 100%;
         max-height: 240px;
-      }
-    }
-    .title-name-tags {
-      padding-top: 0;
-      height: -webkit-fit-content;
-      height: -moz-fit-content;
-      height: fit-content;
-      .tags {
-        display: none;
-      }
-      .name {
-        width: 100%;
-      }
-      .title-episodes {
-        display: none;
       }
     }
   }
