search and some style

--- a/src/components/catalogue-page/catalogue-page.css
+++ b/src/components/catalogue-page/catalogue-page.css
@@ -390,6 +390,8 @@
     min-height: fit-content;
     padding: 5px;
     align-items: center;
+    min-height: 90vh;
+    min-width: 90vw;
   }
   .catalogue-page .input-title {
     display: block;
