--- a/src/components/catalogue-page/catalogue-page.scss
+++ b/src/components/catalogue-page/catalogue-page.scss
@@ -384,6 +384,8 @@
       min-height: fit-content;
       padding: 5px;
       align-items: center;
+      min-height: 90vh;
+      min-width: 90vw;
     }
     .input-title {
       display: block;
