--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -167,7 +167,7 @@
 }
 
 .search-result-wraper {
-  width: 300px;
+  width: 435px;
   height: 0;
   opacity: 0;
   display: flex;
@@ -175,8 +175,7 @@
   flex-direction: column;
   background-color: $background-trans;
   z-index: 100000;
-  margin-top: 50px;
-  margin-left: -50px;
+  margin-top: 712px;
   transition: 0.2s;
   a:last-of-type {
     margin-bottom: 10px;
@@ -188,6 +187,9 @@
     .title-name-tags {
       width: 100%;
       padding-left: 10px;
+      .tag{
+        font-size: 16px;
+      }
     }
   }
   .search-result-title:hover {
@@ -202,6 +204,7 @@
   font-weight: 800;
   font-size: 18px;
   padding: 10px;
+  margin-top: 100px;
 }
 .search-wraper.hide {
   .search-result-wraper {
@@ -272,9 +275,6 @@
 }
 
 @media (max-width: 1100px) {
-  .header {
-    justify-content: space-evenly;
-  }
   .header-mobile-button {
     display: inline-flex;
     background: rgba(86, 86, 86, 0.6);
@@ -297,6 +297,7 @@
       AppleGothic,
       sans-serif;
     border-radius: 5px;
+    margin-left: 25px;
     img {
       position: relative;
       bottom: 13px;
@@ -352,6 +353,9 @@
     border: none;
     height: 30px;
     color: white;
+  }
+  .header-search-lupa {
+    display: none;
   }
 }
 @keyframes searchApper {
