--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -77,6 +77,9 @@
   .logo::before {
     top: 5px;
   }
+  .search-result-wraper {
+    top: 47px;
+  }
 }
 .header-mobile-menu {
   display: none;
@@ -143,7 +146,6 @@
   .header-search-lupa {
     background-color: $base-light-blue;
     border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
   }
   .input-title {
     outline: none;
@@ -152,6 +154,7 @@
     border-radius: 5px;
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
   }
 }
 .input-title {
@@ -175,8 +178,8 @@
   flex-direction: column;
   background-color: $background-trans;
   z-index: 100000;
-  margin-top: 712px;
-  transition: 0.2s;
+  top: 75px;
+  transition: height 0.2s;
   a:last-of-type {
     margin-bottom: 10px;
   }
@@ -187,7 +190,7 @@
     .title-name-tags {
       width: 100%;
       padding-left: 10px;
-      .tag{
+      .tag {
         font-size: 16px;
       }
     }
@@ -204,7 +207,7 @@
   font-weight: 800;
   font-size: 18px;
   padding: 10px;
-  margin-top: 100px;
+  transition: height 0.2s;
 }
 .search-wraper.hide {
   .search-result-wraper {
