--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,11 @@ body {
   z-index: -1;
   background-color: #2179df;
   transition: 1s;
-  font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
+  font-family:
+    Century Gothic,
+    CenturyGothic,
+    AppleGothic,
+    sans-serif;
   color: white;
   max-width: 100vw;
   max-height: -moz-fit-content;
@@ -33,7 +37,8 @@ body:before {
   width: 100vw;
   height: 100vh;
   z-index: -10;
-  background: url("./components/img/bacground19201080.webp") no-repeat center center;
+  background: url("./components/img/bacground19201080.webp") no-repeat center
+    center;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -56,7 +61,11 @@ body::-webkit-scrollbar-thumb {
 
 .okami {
   color: white;
-  font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
+  font-family:
+    Century Gothic,
+    CenturyGothic,
+    AppleGothic,
+    sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -106,4 +115,4 @@ body::-webkit-scrollbar-thumb {
   .okami {
     min-height: 730px;
   }
-}/*# sourceMappingURL=App.css.map */
+} /*# sourceMappingURL=App.css.map */
