--- a/src/components/title-page/title-page.scss
+++ b/src/components/title-page/title-page.scss
@@ -30,6 +30,8 @@
   height: -webkit-min-content;
   height: -moz-min-content;
   height: min-content;
+  min-width: 65vw;
+  min-height: 60vh;
   .poster-wraper {
     height: -webkit-fit-content;
     height: -moz-fit-content;
@@ -107,12 +109,13 @@
   .title-text-info {
     display: flex;
     flex-direction: column;
-    gap: 25px;
+    gap: 40px;
     height: 100%;
     font-size: 19px;
     height: -webkit-fit-content;
     height: -moz-fit-content;
     height: fit-content;
+    width: 90%;
     .title-name {
       font-size: 35px;
     }
@@ -124,7 +127,7 @@
 }
 .title-desc {
   display: inline-block;
-  max-width: 970px;
+  max-width: 100%;
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
@@ -184,11 +187,11 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  width: fit-content;
+  width: 65vw;
   margin: 0 auto;
   .player,
   .player-placeholder {
-    width: 1204px;
+    width: 65vw;
     height: 720px;
     margin-left: auto;
     margin-right: auto;
@@ -197,13 +200,6 @@
     border-bottom: 2px solid $base-light-blue;
     border-right: 2px solid $base-light-blue;
     border-left: 1px solid $base-light-blue;
-    body {
-      background-color: white;
-    }
-  }
-}
-iframe {
-  html {
     body {
       background-color: white;
     }
@@ -288,7 +284,7 @@ iframe {
   display: inline-flex;
   gap: 15px;
   height: 50px;
-  width: 1205px;
+  width: 65vw;
   align-items: center;
 }
 .episode-wraper {
@@ -325,7 +321,7 @@ iframe {
 }
 
 .comments-wraper {
-  width: 1205px;
+  width: 65vw;
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
@@ -341,7 +337,7 @@ iframe {
   gap: 5px;
   background-color: $base-dark-blue;
   padding-top: 5px;
-  width: 1205px;
+  width: 65vw;
   .style {
     width: 40px;
     height: 40px;
@@ -349,7 +345,7 @@ iframe {
   }
 }
 .comment-input {
-  width: 1205px;
+  width: 65vw;
   height: 150px;
   resize: none;
   background: #064b8c;
@@ -369,17 +365,17 @@ iframe {
   color: black;
   width: 250px;
   height: 50px;
-  margin-left: 80%;
   font-size: 20px;
-  margin-bottom: 60px;
   border-radius: 3px;
   transition: 0.5s;
+  align-self: flex-end;
+  margin-bottom: 30px;
 }
 .comment-send:hover {
   background-color: #3c87e8;
 }
 .devider-line-long {
-  width: 1250px;
+  width: 65vw;
   height: 2px;
   background-color: $base-dark-blue;
   margin-bottom: 50px;
@@ -388,7 +384,7 @@ iframe {
   background-color: $base-dark-blue;
   display: flex;
   flex-direction: column;
-  width: 1205px;
+  width: 65vw;
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
@@ -399,7 +395,7 @@ iframe {
   box-shadow: 2px 4px 4px 0px rgba(0, 0, 0, 0.25);
   padding: 5px;
   .comment {
-    width: 1160px;
+    width: 64vw;
     height: 150px;
     padding: 10px;
     background-color: #064b8c;
@@ -415,7 +411,7 @@ iframe {
   }
 }
 .comment-content {
-  width: 950px;
+  width: 60vw;
   height: 100%;
   .comment-name-date {
     font-size: 20px;
