--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -180,7 +180,7 @@
   z-index: 100000;
   top: 75px;
   transition: height 0.2s;
-  a:last-of-type {
+  .search-result-title:last-of-type {
     margin-bottom: 10px;
   }
   .search-result-title {
