--- a/src/components/title/title.scss
+++ b/src/components/title/title.scss
@@ -115,10 +115,14 @@
   .title-poster-wraper {
     width: 100px;
     height: 125px;
+    margin-left: 0;
     .title-poster {
       width: 100px;
       height: 125px;
     }
+  }
+  .tag {
+    margin-left: 0;
   }
 }
 .search-result-title:hover {
