skeleton to catalogue added

--- a/src/components/title/title.css
+++ b/src/components/title/title.css
@@ -1,5 +1,5 @@
 .title-main {
-  width: 190px;
+  width: 200px;
   transition: 0.5s;
   height: 410px;
   margin-top: 20px;
@@ -13,7 +13,7 @@
   z-index: 1;
   position: relative;
   transition: 0.3s;
-  width: 190px;
+  width: 200px;
 }
 .title-main .name {
   display: inline-block;
@@ -132,6 +132,10 @@
 .search-result-title:hover .poster {
   filter: brightness(70%);
   scale: 1.03;
+}
+
+.catalogue-page .titles-wraper .catalogue-page-title {
+  width: 190px;
 }
 
 @media (max-width: 1100px) {
