--- a/src/components/main-page/main-page.css
+++ b/src/components/main-page/main-page.css
@@ -12,7 +12,8 @@
 }
 
 .season-anime {
-  min-width: 1305px;
+  min-width: 70vw;
+  width: 100%;
 }
 .season-anime .season-titles {
   min-width: inherit;
@@ -26,7 +27,7 @@
   background-color: rgba(6, 75, 140, 0.8);
   padding: 0 20px 20px 20px;
   display: flex;
-  gap: 25px;
+  gap: 22px;
   border-radius: 10px;
   margin-bottom: 50px;
   flex-wrap: wrap;
