--- a/src/components/main-page/main-page.scss
+++ b/src/components/main-page/main-page.scss
@@ -12,7 +12,8 @@
   }
 }
 .season-anime {
-  min-width: 1305px;
+  min-width: 70vw;
+  width: 100%;
   .season-titles {
     min-width: inherit;
   }
@@ -24,7 +25,7 @@
   background-color: $background-trans;
   padding: 0 20px 20px 20px;
   display: flex;
-  gap: 25px;
+  gap: 22px;
   border-radius: 10px;
   margin-bottom: 50px;
   flex-wrap: wrap;
