some updates, pagination, skeleton, style

--- a/src/components/catalogue-page/Pagination/Pagination.scss
+++ b/src/components/catalogue-page/Pagination/Pagination.scss
@@ -17,6 +17,10 @@
   border-radius: 5px;
   cursor: pointer;
   font-size: 16px;
+  text-decoration: none;
+  align-items: center;
+  display: flex;
+  justify-content: center;
 }
 .catalogue-pagination {
   width: fit-content;
