--- a/src/components/catalogue-page/Pagination/Pagination.css
+++ b/src/components/catalogue-page/Pagination/Pagination.css
@@ -16,6 +16,10 @@
   border-radius: 5px;
   cursor: pointer;
   font-size: 16px;
+  text-decoration: none;
+  align-items: center;
+  display: flex;
+  justify-content: center;
 }
 
 .catalogue-pagination {
