--- a/src/components/main-page/main-page.css
+++ b/src/components/main-page/main-page.css
@@ -12,11 +12,11 @@
 }
 
 .season-anime {
-  min-width: 70vw;
+  max-width: 71vw;
   width: 100%;
 }
 .season-anime .season-titles {
-  min-width: inherit;
+  padding-top: 20px;
 }
 
 .season-titles,
@@ -31,6 +31,10 @@
   border-radius: 10px;
   margin-bottom: 50px;
   flex-wrap: wrap;
+}
+
+.recetly-added-title {
+  margin-bottom: 20px;
 }
 
 .recently-added-anime .recetly-added-title::before {
