--- a/src/components/title/title.scss
+++ b/src/components/title/title.scss
@@ -5,15 +5,17 @@
   transition: 0.5s;
   height: 410px;
   overflow: hidden;
+
   span {
     font-size: 14px;
   }
   .poster {
-    height: 295px;
     z-index: 1;
     position: relative;
     transition: 0.3s;
-    width: 200px;
+    margin-top: auto;
+    margin-bottom: auto;
+    max-height: 290px;
   }
   .name {
     display: inline-block;
@@ -70,6 +72,7 @@
   margin-bottom: 10px;
   display: flex;
   flex-direction: column;
+  background-color: $base-dark-blue;
 }
 .title-type,
 .title-year {
