--- a/src/components/title-page/title-page.css
+++ b/src/components/title-page/title-page.css
@@ -542,6 +542,25 @@ button {
   background-color: #05315a;
 }
 
+.full-image-wraper {
+  display: block;
+  margin: 0 auto;
+  max-width: 630px;
+}
+
+.full-image {
+  position: fixed;
+  top: 30px;
+  z-index: 1000000;
+  width: 50%;
+  height: auto;
+  max-height: 95vh;
+  animation: img-appear 0.5s;
+  left: 25%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
 @media (max-width: 1100px) {
   .poster-wraper {
     align-items: center;
@@ -603,5 +622,15 @@ button {
   .player-option,
   .dub-option {
     width: 30vw;
+  }
+}
+@keyframes img-appear {
+  from {
+    opacity: 0;
+    scale: 0.8;
+  }
+  to {
+    opacity: 1;
+    scale: 1;
   }
 }/*# sourceMappingURL=title-page.css.map */
