style min maxing xD

--- a/src/components/catalogue-page/catalogue-page.scss
+++ b/src/components/catalogue-page/catalogue-page.scss
@@ -335,7 +335,7 @@
 .catalogue-search {
   width: 100%;
   background-color: rgba(6, 75, 140, 0.8);
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   border-radius: 6px;
   display: flex;
   justify-content: flex-start;
@@ -351,6 +351,7 @@
     border-bottom: none;
     outline: none;
     padding-left: 10px;
+    border-right: 1px solid $base-light-blue;
   }
 }
 .mobile-button-filter {
