--- a/src/components/title-page/title-page.css
+++ b/src/components/title-page/title-page.css
@@ -178,6 +178,7 @@ button {
   border-bottom: 1px solid #3ce3e8;
   margin-bottom: 10px;
   height: 20px;
+  cursor: pointer;
 }
 .title-desc-button .arrow-wraper {
   transform: rotate(90deg);
@@ -245,12 +246,12 @@ button {
   display: flex;
   align-items: center;
   flex-direction: column;
-  width: 55vw;
+  width: 65vw;
   margin: 0 auto;
 }
 .player-wraper .player,
 .player-wraper .player-placeholder {
-  width: 55vw;
+  width: -webkit-fill-available;
   height: 720px;
   margin-left: auto;
   margin-right: auto;
@@ -352,7 +353,7 @@ button {
   display: inline-flex;
   gap: 15px;
   height: 50px;
-  width: 55vw;
+  width: inherit;
   align-items: center;
 }
 
@@ -389,7 +390,7 @@ button {
 }
 
 .comments-wraper {
-  width: 55vw;
+  width: 60vw;
   height: -moz-fit-content;
   height: fit-content;
   margin-left: auto;
@@ -404,7 +405,7 @@ button {
   height: 40px;
   gap: 10px;
   background-color: #05315a;
-  width: 55vw;
+  width: inherit;
   align-items: center;
 }
 .comments-styles .style {
@@ -418,7 +419,7 @@ button {
 }
 
 .comment-input {
-  width: 55vw;
+  width: 60vw;
   height: 150px;
   resize: none;
   background: #064b8c;
@@ -452,7 +453,7 @@ button {
 }
 
 .devider-line-long {
-  width: 55vw;
+  width: inherit;
   height: 2px;
   background-color: #05315a;
   margin-bottom: 50px;
@@ -462,7 +463,7 @@ button {
   background-color: #05315a;
   display: flex;
   flex-direction: column;
-  width: 55vw;
+  width: inherit;
   height: -moz-fit-content;
   height: fit-content;
   margin-left: auto;
@@ -473,7 +474,6 @@ button {
   padding: 5px;
 }
 .comments .comment {
-  width: 54vw;
   height: 150px;
   padding: 10px;
   background-color: #064b8c;
