--- a/src/components/title/title.scss
+++ b/src/components/title/title.scss
@@ -157,17 +157,14 @@
     background-color: $background-trans;
     .title-poster-wraper {
       width: 100px;
-      height: 125px;
+      height: 150px;
       display: flex;
       margin-right: 10px;
     }
     .poster {
       width: 100px;
-      height: 125px;
+      height: 150px;
       position: absolute;
-      width: -webkit-min-content;
-      width: -moz-min-content;
-      width: min-content;
     }
     .status {
       font-size: 12px;
@@ -177,7 +174,7 @@
       display: none;
     }
     .name {
-      font-size: 20px;
+      font-size: 18px;
       max-width: 220px;
       font-weight: 700;
       max-height: 55px;
@@ -190,6 +187,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+    margin-left: 5px;
   }
   .title-episodes {
     position: static;
