--- a/src/components/main-page/main-page.scss
+++ b/src/components/main-page/main-page.scss
@@ -64,9 +64,7 @@
     height: fit-content;
     width: 100%;
     min-width: 0;
-    .season-anime-title {
-      margin-left: 30px;
-    }
+    margin: 0 auto;
   }
   .season-titles {
     flex-direction: column;
@@ -79,28 +77,22 @@
     width: 100%;
     padding: 0;
     padding-top: 5px;
-    padding-left: 5px;
     background: none;
     gap: 5px;
     margin-left: auto;
     margin-right: auto;
     min-width: 0;
-
-    .title-main {
-      width: 85vw;
-      height: 150px;
-      .poster {
-        width: 100px;
-        height: 150px;
-      }
-    }
+  }
+  .season-title {
+    height: 150px;
+    width: 100%;
   }
   .recently-added-anime {
     width: 100%;
     height: fit-content;
   }
   .recently-added-titles {
-    row-gap: 20px;
+    row-gap: 10px;
     margin-top: 30px;
     justify-content: space-around;
   }
