--- a/src/components/title/title.css
+++ b/src/components/title/title.css
@@ -154,16 +154,14 @@
   }
   .title-main .title-poster-wraper {
     width: 100px;
-    height: 125px;
+    height: 150px;
     display: flex;
     margin-right: 10px;
   }
   .title-main .poster {
     width: 100px;
-    height: 125px;
+    height: 150px;
     position: absolute;
-    width: -moz-min-content;
-    width: min-content;
   }
   .title-main .status {
     font-size: 12px;
@@ -173,7 +171,7 @@
     display: none;
   }
   .title-main .name {
-    font-size: 20px;
+    font-size: 18px;
     max-width: 220px;
     font-weight: 700;
     max-height: 55px;
@@ -185,6 +183,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+    margin-left: 5px;
   }
   .title-episodes {
     position: static;
